<resources>
    <string name="app_name">ContactApp</string>
    <string name="toolbar_switch">Cambiar Vista</string>
    <string name="toolbar_addContact">Nuevo Contacto</string>
    <string name="toolbar_searchContact">Buscar Contacto</string>

    <string name="titulo_edad">Edad</string>
    <string name="titulo_peso">Peso</string>
    <string name="titulo_telefono">Telefono</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_direccion">Dirección</string>
    <string name="Eliminar">titulo_eliminar</string>
    <string name="titulo_contacto">Editar Contacto</string>

</resources>
